[project]
name = "mcp-server-naa"
version = "0.1.0"
description = "An MCP server for Netwrix Access Analyzer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.5.0",
    "pyodbc>=4.0.39",
    "python-dotenv>=1.0.0",
]
license = "MIT"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
